# basedlang

./: .gitignore  2  AGENTS.md  CLAUDE.md  CMakeLists.txt  TODO.md  grammar.md  language.md
code/ast/include/ast/: ast.h  operator.h  source_location.h  source_span.h
code/ast/src/: ast.cpp  operator.cpp  source_span.cpp
code/based/: main.cpp  run.cpp  run.h
code/based/test/: run_test.cpp
code/basedast/include/basedast/: ast.h  operator.h  source_location.h  source_span.h
code/basedast/src/: ast.cpp  operator.cpp  source_span.cpp
code/basedhlir/include/basedhlir/: compile.h  constant_value.h  hlir.h  interpret.h  operator_overload.h  source_location.h  source_span.h  symbol_table.h  type.h
code/basedhlir/src/: compile.cpp  interpret.cpp  operator_functors.h  primitive_type_traits.h  symbol_table.cpp  type.cpp
code/basedhlir/test/: compile_test.cpp  symbol_table_test.cpp  type_test.cpp
code/basedinterp/include/basedinterp/: interpreter.h  value.h
code/basedinterp/src/: interpreter.cpp  main.cpp
code/basedinterp/test/: interpreter_test.cpp
code/basedir/include/basedir/: compiler.h  ir.h  type.h
code/basedir/src/: compiler.cpp  ir.cpp  type.cpp
code/basedir/test/: compiler_test.cpp
code/basedlex/include/basedlex/: binary_stream.h  char_stream.h  char_stream_reader.h  istream_binary_stream.h  lexeme.h  lexeme_stream.h  lexeme_stream_reader.h  lexer.h  lexer_input_stream.h  ring_buffer.h  source_location.h  token.h  utf8_char_stream.h
code/basedlex/src/: char_stream_reader.cpp  istream_binary_stream.cpp  lexeme_stream.cpp  lexeme_stream_reader.cpp  lexer.cpp  utf8_char_stream.cpp
code/basedlex/test/: istream_binary_stream.cpp  istream_binary_stream.h  lexeme_stream_test.cpp  lexer_test.cpp  ring_buffer_test.cpp  utf8_char_stream_test.cpp
code/basedparse/include/basedparse/: ast.h  expression.h  (+7 more)
code/basedparse/src/: ast.cpp  operator.cpp  parser.cpp  source_span.cpp
code/basedparse/test/: parser_test.cpp
code/benson/: main.cpp  run.cpp  run.h
code/benson/test/: run_test.cpp
code/bensonast/src/: ast.cpp  operator.cpp  source_span.cpp
code/bensonhlir/src/: compile.cpp  interpret.cpp  operator_functors.h  primitive_type_traits.h  symbol_table.cpp  type.cpp
code/bensonhlir/test/: compile_test.cpp  symbol_table_test.cpp  type_test.cpp
code/bensonir/src/: compile.cpp  interpret.cpp  operator_functors.h  primitive_type_traits.h  symbol_table.cpp  type.cpp
code/bensonir/test/: compile_test.cpp  symbol_table_test.cpp  type_test.cpp
code/bensonlex/src/: char_stream_reader.cpp  istream_binary_stream.cpp  lexeme_stream.cpp  lexeme_stream_reader.cpp  utf8_char_stream.cpp
code/bensonlex/test/: lexeme_stream_test.cpp  ring_buffer_test.cpp  utf8_char_stream_test.cpp
code/bensonparse/src/: parser.cpp
code/bensonparse/test/: parser_test.cpp
code/bytecode/src/: bytecode_writer.cpp  module_builder.cpp  source_map.cpp
code/bytecode/test/: bytecode_writer_test.cpp  module_builder_test.cpp  module_test.cpp
code/frontend/src/: compile.cpp  operator_functors.h  primitive_type_traits.h  symbol_table.cpp
code/frontend/test/: compile_test.cpp  symbol_table_test.cpp
code/hlir/src/: interpret.cpp  type.cpp
code/hlir/test/: source_map_test.cpp  type_test.cpp
code/hlir2llir/src/: lower.cpp
code/hlir2llir/test/: lower_test.cpp
code/interning/test/: interning_test.cpp
code/ir/src/: compile.cpp  interpret.cpp  operator_functors.h  primitive_type_traits.h  source_map.cpp  symbol_table.cpp  type.cpp
code/ir/test/: compile_test.cpp  source_map_test.cpp  symbol_table_test.cpp  type_test.cpp
code/kale/: main.cpp  run.cpp  run.h
code/kale/test/: run_test.cpp
code/kaleast/src/: ast.cpp  operator.cpp  source_span.cpp
code/kalehlir/src/: compile.cpp  interpret.cpp  operator_functors.h  primitive_type_traits.h  symbol_table.cpp  type.cpp
code/kalehlir/test/: compile_test.cpp  symbol_table_test.cpp  type_test.cpp
code/kalelex/src/: char_stream_reader.cpp  istream_binary_stream.cpp  lexeme_stream.cpp  lexeme_stream_reader.cpp  utf8_char_stream.cpp
code/kalelex/test/: lexeme_stream_test.cpp  ring_buffer_test.cpp  utf8_char_stream_test.cpp
code/kaleparse/src/: parser.cpp
code/kaleparse/test/: parser_test.cpp
code/lexing/src/: char_stream_reader.cpp  istream_binary_stream.cpp  lexeme.cpp  lexeme_stream.cpp  lexeme_stream_reader.cpp  source_span.cpp  utf8_char_stream.cpp
code/lexing/test/: lexeme_stream_test.cpp  ring_buffer_test.cpp  utf8_char_stream_test.cpp
code/llir/test/: llir_test.cpp
code/parsing/src/: parser.cpp
code/parsing/test/: parser_test.cpp
code/spelling/test/: spelling_test.cpp
code/streams/test/: binary_output_stream_test.cpp  binary_output_stream_writer_test.cpp  buffered_binary_input_stream_test.cpp  buffered_input_stream_test.cpp  char_input_stream_peeker_test.cpp  char_input_stream_reader_test.cpp  istream_binary_input_stream_test.cpp  istream_input_stream_test.cpp  lookahead_char_input_stream_reader_test.cpp  posix_binary_input_stream_test.cpp  posix_input_stream_test.cpp  utf8_char_input_stream_test.cpp  utf8_char_stream_test.cpp
code/text/test/: string_table_test.cpp
code/vm/src/: vm.cpp
code/vm/test/: vm_test.cpp
docs/wiki/: README.md  antipatterns.md  architecture-overview.md  ast.md  based.md  basedast.md  basedhlir.md  basedlex.md  basedparse.md  benson.md  bensonast.md  bensonhlir.md  bensonir.md  bensonlex.md  bensonparse.md  bytecode.md  compiler-pipeline.md  conventions.md  core-data-model.md  formatting.md  frontend.md  hlir.md  hlir2llir.md  ir.md  kale.md  kaleast.md  kalehlir.md  kalelex.md  kaleparse.md  language.md  lexing.md  llir.md  overview.md  parsing.md  pr-review-guide.md  project-structure.md  source.md  spelling.md  streams.md  string-design.md  (+3 more)
examples/: call_expression.based  call_expression.benson  circle.based  circle.benson  collatz.benson  fibonacci.based  fibonacci.benson  first.based  first.benson  float_sqrt.based  float_sqrt.benson  parameters.based  parameters.benson  primes.based  primes.benson  quicksort.based  quicksort.benson  sqrt.based  sqrt.benson
(+128 files in other folders)
